--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -18,4 +18,4 @@ jobs:
         run: pip install bandit
 
       - name: Run Bandit
-        run: bandit -r . -f json -o bandit-output.json
+        run: bandit -r . -11 -q
