--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -1,6 +1,10 @@
 name: Bandit GitHub Action
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   bandit-check:
