--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,29 @@
-name: Python CI
+name: lint-test-security
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push]
 
 jobs:
-  lint-test-security:
+  bandit-security:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install bandit flake8 pytest
+      - name: Install Bandit
+        run: pip install bandit
 
-    - name: Run Bandit
-      run: bandit -r app/ -ll -q
+      - name: Run Bandit and Save Report
+        run: |
+          bandit -r app/ -ll -q -f html -o bandit-report.txt
+        continue-on-error: true  # Supaya tetap jalan meskipun ada issue
 
-    - name: Run Flake8
-      run: flake8 app/
-
-    - name: Run Tests
-      run: pytest
-
-    env:
-        CI: true
+      - name: Upload Bandit Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: bandit-report
+          path: bandit-report.txt
