--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,14 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.12.4'
 
       - name: Install Bandit
         run: pip install bandit
 
       - name: Run Bandit and Save Report
         run: |
-          bandit -r app/ -ll -q -f html -o bandit-report.txt
+          bandit -r app/ -ll -q -f html -o bandit-report.html
         continue-on-error: true  # Supaya tetap jalan meskipun ada issue
 
       - name: Upload Bandit Report
