--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Run Bandit and Save Report
         run: |
-          bandit -r app/ -ll -q -f json -o bandit-report.json
+          bandit -r app/ -ll -q -f json -o bandit-report.json || true
         continue-on-error: true  # Supaya tetap jalan meskipun ada issue
 
       - name: Upload Bandit Report
