--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12.4'
+      
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install bandit pytest
 
       - name: Install Bandit
         run: pip install bandit
